--- a/wp-content/themes/jeffreyfrith/style.css
+++ b/wp-content/themes/jeffreyfrith/style.css
@@ -717,6 +717,7 @@ input[type='radio'] {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .flex-col, .left-half .left-content {
