--- a/wp-content/themes/jeffreyfrith/style.css
+++ b/wp-content/themes/jeffreyfrith/style.css
@@ -1056,6 +1056,7 @@ a[href^="tel"] {
 .left-half .left-content .content {
   padding: 0 4.6rem 4.6rem 4.6rem;
   display: block;
+  width: calc(100% - 9.2rem);
 }
 
 .menu, .social {
